# scrape

./: .gitignore  .replit  ARCHITECTURE.md  README.md  config.py  config.yaml  exporters.py  main.py  pyproject.toml  replit.md  run_server.py  scraper.py  utils.py  web_interface.py
static/: app.js  style.css
templates/: index.html
